compiler/src/parser/MandaParser.cpp

// Generated from /Users/thosakwe/Source/Compilers/manda/compiler/src/parser/Manda.g4 by ANTLR 4.7


#include "MandaVisitor.h"

#include "MandaParser.h"


using namespace antlrcpp;
using namespace parser;
using namespace antlr4;

MandaParser::MandaParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MandaParser::~MandaParser() {
  delete _interpreter;
}

std::string MandaParser::getGrammarFileName() const {
  return "Manda.g4";
}

const std::vector<std::string>& MandaParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MandaParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

MandaParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MandaParser::DirectiveContext *> MandaParser::CompilationUnitContext::directive() {
  return getRuleContexts<MandaParser::DirectiveContext>();
}

MandaParser::DirectiveContext* MandaParser::CompilationUnitContext::directive(size_t i) {
  return getRuleContext<MandaParser::DirectiveContext>(i);
}

std::vector<MandaParser::TypeAliasDeclContext *> MandaParser::CompilationUnitContext::typeAliasDecl() {
  return getRuleContexts<MandaParser::TypeAliasDeclContext>();
}

MandaParser::TypeAliasDeclContext* MandaParser::CompilationUnitContext::typeAliasDecl(size_t i) {
  return getRuleContext<MandaParser::TypeAliasDeclContext>(i);
}

std::vector<MandaParser::FuncDeclContext *> MandaParser::CompilationUnitContext::funcDecl() {
  return getRuleContexts<MandaParser::FuncDeclContext>();
}

MandaParser::FuncDeclContext* MandaParser::CompilationUnitContext::funcDecl(size_t i) {
  return getRuleContext<MandaParser::FuncDeclContext>(i);
}

std::vector<MandaParser::StmtContext *> MandaParser::CompilationUnitContext::stmt() {
  return getRuleContexts<MandaParser::StmtContext>();
}

MandaParser::StmtContext* MandaParser::CompilationUnitContext::stmt(size_t i) {
  return getRuleContext<MandaParser::StmtContext>(i);
}


size_t MandaParser::CompilationUnitContext::getRuleIndex() const {
  return MandaParser::RuleCompilationUnit;
}

antlrcpp::Any MandaParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

MandaParser::CompilationUnitContext* MandaParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, MandaParser::RuleCompilationUnit);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(31);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MandaParser::T__0) {
      setState(28);
      directive();
      setState(33);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(37);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MandaParser::T__1) {
      setState(34);
      typeAliasDecl();
      setState(39);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(43);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MandaParser::T__3) {
      setState(40);
      funcDecl();
      setState(45);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MandaParser::T__5)
      | (1ULL << MandaParser::T__17)
      | (1ULL << MandaParser::T__18)
      | (1ULL << MandaParser::T__19)
      | (1ULL << MandaParser::FloatLiteral)
      | (1ULL << MandaParser::HexLiteral)
      | (1ULL << MandaParser::IntegerLiteral)
      | (1ULL << MandaParser::Identifier))) != 0)) {
      setState(46);
      stmt();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DirectiveContext ------------------------------------------------------------------

MandaParser::DirectiveContext::DirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MandaParser::ImportDirectiveContext* MandaParser::DirectiveContext::importDirective() {
  return getRuleContext<MandaParser::ImportDirectiveContext>(0);
}


size_t MandaParser::DirectiveContext::getRuleIndex() const {
  return MandaParser::RuleDirective;
}

antlrcpp::Any MandaParser::DirectiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitDirective(this);
  else
    return visitor->visitChildren(this);
}

MandaParser::DirectiveContext* MandaParser::directive() {
  DirectiveContext *_localctx = _tracker.createInstance<DirectiveContext>(_ctx, getState());
  enterRule(_localctx, 2, MandaParser::RuleDirective);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    importDirective();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportDirectiveContext ------------------------------------------------------------------

MandaParser::ImportDirectiveContext::ImportDirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MandaParser::ImportDirectiveContext::Identifier() {
  return getToken(MandaParser::Identifier, 0);
}


size_t MandaParser::ImportDirectiveContext::getRuleIndex() const {
  return MandaParser::RuleImportDirective;
}

antlrcpp::Any MandaParser::ImportDirectiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitImportDirective(this);
  else
    return visitor->visitChildren(this);
}

MandaParser::ImportDirectiveContext* MandaParser::importDirective() {
  ImportDirectiveContext *_localctx = _tracker.createInstance<ImportDirectiveContext>(_ctx, getState());
  enterRule(_localctx, 4, MandaParser::RuleImportDirective);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(MandaParser::T__0);
    setState(55);
    dynamic_cast<ImportDirectiveContext *>(_localctx)->symbol = match(MandaParser::Identifier);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeAliasDeclContext ------------------------------------------------------------------

MandaParser::TypeAliasDeclContext::TypeAliasDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MandaParser::TypeContext* MandaParser::TypeAliasDeclContext::type() {
  return getRuleContext<MandaParser::TypeContext>(0);
}

tree::TerminalNode* MandaParser::TypeAliasDeclContext::Identifier() {
  return getToken(MandaParser::Identifier, 0);
}


size_t MandaParser::TypeAliasDeclContext::getRuleIndex() const {
  return MandaParser::RuleTypeAliasDecl;
}

antlrcpp::Any MandaParser::TypeAliasDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitTypeAliasDecl(this);
  else
    return visitor->visitChildren(this);
}

MandaParser::TypeAliasDeclContext* MandaParser::typeAliasDecl() {
  TypeAliasDeclContext *_localctx = _tracker.createInstance<TypeAliasDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, MandaParser::RuleTypeAliasDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    match(MandaParser::T__1);
    setState(58);
    dynamic_cast<TypeAliasDeclContext *>(_localctx)->alias = match(MandaParser::Identifier);
    setState(59);
    match(MandaParser::T__2);
    setState(60);
    type(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDeclContext ------------------------------------------------------------------

MandaParser::FuncDeclContext::FuncDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MandaParser::ParameterListContext* MandaParser::FuncDeclContext::parameterList() {
  return getRuleContext<MandaParser::ParameterListContext>(0);
}

MandaParser::FunctionBodyContext* MandaParser::FuncDeclContext::functionBody() {
  return getRuleContext<MandaParser::FunctionBodyContext>(0);
}

tree::TerminalNode* MandaParser::FuncDeclContext::Identifier() {
  return getToken(MandaParser::Identifier, 0);
}

MandaParser::TypeContext* MandaParser::FuncDeclContext::type() {
  return getRuleContext<MandaParser::TypeContext>(0);
}


size_t MandaParser::FuncDeclContext::getRuleIndex() const {
  return MandaParser::RuleFuncDecl;
}

antlrcpp::Any MandaParser::FuncDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitFuncDecl(this);
  else
    return visitor->visitChildren(this);
}

MandaParser::FuncDeclContext* MandaParser::funcDecl() {
  FuncDeclContext *_localctx = _tracker.createInstance<FuncDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, MandaParser::RuleFuncDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(MandaParser::T__3);
    setState(63);
    dynamic_cast<FuncDeclContext *>(_localctx)->name = match(MandaParser::Identifier);
    setState(64);
    parameterList();
    setState(65);
    match(MandaParser::T__4);
    setState(66);
    dynamic_cast<FuncDeclContext *>(_localctx)->returnType = type(0);
    setState(67);
    functionBody();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionBodyContext ------------------------------------------------------------------

MandaParser::FunctionBodyContext::FunctionBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MandaParser::BlockContext* MandaParser::FunctionBodyContext::block() {
  return getRuleContext<MandaParser::BlockContext>(0);
}


size_t MandaParser::FunctionBodyContext::getRuleIndex() const {
  return MandaParser::RuleFunctionBody;
}

antlrcpp::Any MandaParser::FunctionBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitFunctionBody(this);
  else
    return visitor->visitChildren(this);
}

MandaParser::FunctionBodyContext* MandaParser::functionBody() {
  FunctionBodyContext *_localctx = _tracker.createInstance<FunctionBodyContext>(_ctx, getState());
  enterRule(_localctx, 10, MandaParser::RuleFunctionBody);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

MandaParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MandaParser::ParameterContext *> MandaParser::ParameterListContext::parameter() {
  return getRuleContexts<MandaParser::ParameterContext>();
}

MandaParser::ParameterContext* MandaParser::ParameterListContext::parameter(size_t i) {
  return getRuleContext<MandaParser::ParameterContext>(i);
}


size_t MandaParser::ParameterListContext::getRuleIndex() const {
  return MandaParser::RuleParameterList;
}

antlrcpp::Any MandaParser::ParameterListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitParameterList(this);
  else
    return visitor->visitChildren(this);
}

MandaParser::ParameterListContext* MandaParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 12, MandaParser::RuleParameterList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(MandaParser::T__5);
    setState(81);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MandaParser::T__8

    || _la == MandaParser::Identifier) {
      setState(77);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(72);
          parameter();
          setState(73);
          match(MandaParser::T__6); 
        }
        setState(79);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
      }
      setState(80);
      parameter();
    }
    setState(83);
    match(MandaParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

MandaParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MandaParser::TypeContext* MandaParser::ParameterContext::type() {
  return getRuleContext<MandaParser::TypeContext>(0);
}

tree::TerminalNode* MandaParser::ParameterContext::Identifier() {
  return getToken(MandaParser::Identifier, 0);
}


size_t MandaParser::ParameterContext::getRuleIndex() const {
  return MandaParser::RuleParameter;
}

antlrcpp::Any MandaParser::ParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitParameter(this);
  else
    return visitor->visitChildren(this);
}

MandaParser::ParameterContext* MandaParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 14, MandaParser::RuleParameter);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MandaParser::T__8) {
      setState(85);
      dynamic_cast<ParameterContext *>(_localctx)->propertyKeyword = match(MandaParser::T__8);
    }
    setState(88);
    dynamic_cast<ParameterContext *>(_localctx)->name = match(MandaParser::Identifier);
    setState(89);
    match(MandaParser::T__4);
    setState(90);
    type(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

MandaParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MandaParser::BlockContext::getRuleIndex() const {
  return MandaParser::RuleBlock;
}

void MandaParser::BlockContext::copyFrom(BlockContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- EmptyBlockContext ------------------------------------------------------------------

MandaParser::EmptyBlockContext::EmptyBlockContext(BlockContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::EmptyBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitEmptyBlock(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CurlyBlockContext ------------------------------------------------------------------

std::vector<MandaParser::StmtContext *> MandaParser::CurlyBlockContext::stmt() {
  return getRuleContexts<MandaParser::StmtContext>();
}

MandaParser::StmtContext* MandaParser::CurlyBlockContext::stmt(size_t i) {
  return getRuleContext<MandaParser::StmtContext>(i);
}

MandaParser::CurlyBlockContext::CurlyBlockContext(BlockContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::CurlyBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitCurlyBlock(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArrowBlockContext ------------------------------------------------------------------

MandaParser::ExprContext* MandaParser::ArrowBlockContext::expr() {
  return getRuleContext<MandaParser::ExprContext>(0);
}

MandaParser::ArrowBlockContext::ArrowBlockContext(BlockContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::ArrowBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitArrowBlock(this);
  else
    return visitor->visitChildren(this);
}
MandaParser::BlockContext* MandaParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 16, MandaParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(103);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MandaParser::T__9: {
        _localctx = dynamic_cast<BlockContext *>(_tracker.createInstance<MandaParser::ArrowBlockContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(92);
        match(MandaParser::T__9);
        setState(93);
        expr(0);
        break;
      }

      case MandaParser::T__10: {
        _localctx = dynamic_cast<BlockContext *>(_tracker.createInstance<MandaParser::EmptyBlockContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(94);
        match(MandaParser::T__10);
        break;
      }

      case MandaParser::T__11: {
        _localctx = dynamic_cast<BlockContext *>(_tracker.createInstance<MandaParser::CurlyBlockContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(95);
        match(MandaParser::T__11);
        setState(99);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << MandaParser::T__5)
          | (1ULL << MandaParser::T__17)
          | (1ULL << MandaParser::T__18)
          | (1ULL << MandaParser::T__19)
          | (1ULL << MandaParser::FloatLiteral)
          | (1ULL << MandaParser::HexLiteral)
          | (1ULL << MandaParser::IntegerLiteral)
          | (1ULL << MandaParser::Identifier))) != 0)) {
          setState(96);
          stmt();
          setState(101);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(102);
        match(MandaParser::T__12);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

MandaParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MandaParser::TypeContext::getRuleIndex() const {
  return MandaParser::RuleType;
}

void MandaParser::TypeContext::copyFrom(TypeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UnionTypeContext ------------------------------------------------------------------

std::vector<MandaParser::TypeContext *> MandaParser::UnionTypeContext::type() {
  return getRuleContexts<MandaParser::TypeContext>();
}

MandaParser::TypeContext* MandaParser::UnionTypeContext::type(size_t i) {
  return getRuleContext<MandaParser::TypeContext>(i);
}

MandaParser::UnionTypeContext::UnionTypeContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::UnionTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitUnionType(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StructTypeContext ------------------------------------------------------------------

std::vector<MandaParser::StructTypeMemberContext *> MandaParser::StructTypeContext::structTypeMember() {
  return getRuleContexts<MandaParser::StructTypeMemberContext>();
}

MandaParser::StructTypeMemberContext* MandaParser::StructTypeContext::structTypeMember(size_t i) {
  return getRuleContext<MandaParser::StructTypeMemberContext>(i);
}

MandaParser::StructTypeContext::StructTypeContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::StructTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitStructType(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenTypeContext ------------------------------------------------------------------

MandaParser::TypeContext* MandaParser::ParenTypeContext::type() {
  return getRuleContext<MandaParser::TypeContext>(0);
}

MandaParser::ParenTypeContext::ParenTypeContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::ParenTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitParenType(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdTypeContext ------------------------------------------------------------------

tree::TerminalNode* MandaParser::IdTypeContext::Identifier() {
  return getToken(MandaParser::Identifier, 0);
}

MandaParser::IdTypeContext::IdTypeContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::IdTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitIdType(this);
  else
    return visitor->visitChildren(this);
}

MandaParser::TypeContext* MandaParser::type() {
   return type(0);
}

MandaParser::TypeContext* MandaParser::type(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  MandaParser::TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, parentState);
  MandaParser::TypeContext *previousContext = _localctx;
  size_t startState = 18;
  enterRecursionRule(_localctx, 18, MandaParser::RuleType, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(119);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MandaParser::Identifier: {
        _localctx = _tracker.createInstance<IdTypeContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(106);
        match(MandaParser::Identifier);
        break;
      }

      case MandaParser::T__11: {
        _localctx = _tracker.createInstance<StructTypeContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(107);
        match(MandaParser::T__11);
        setState(111);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << MandaParser::T__14)
          | (1ULL << MandaParser::T__15)
          | (1ULL << MandaParser::T__16)
          | (1ULL << MandaParser::Identifier))) != 0)) {
          setState(108);
          structTypeMember();
          setState(113);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(114);
        match(MandaParser::T__12);
        break;
      }

      case MandaParser::T__5: {
        _localctx = _tracker.createInstance<ParenTypeContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(115);
        match(MandaParser::T__5);
        setState(116);
        type(0);
        setState(117);
        match(MandaParser::T__7);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(130);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<UnionTypeContext>(_tracker.createInstance<TypeContext>(parentContext, parentState));
        _localctx = newContext;
        newContext->left = previousContext;
        pushNewRecursionContext(newContext, startState, RuleType);
        setState(121);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(123); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(122);
          match(MandaParser::T__13);
          setState(125); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == MandaParser::T__13);
        setState(127);
        dynamic_cast<UnionTypeContext *>(_localctx)->right = type(3); 
      }
      setState(132);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- StructTypeMemberContext ------------------------------------------------------------------

MandaParser::StructTypeMemberContext::StructTypeMemberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MandaParser::StructTypeMemberContext::getRuleIndex() const {
  return MandaParser::RuleStructTypeMember;
}

void MandaParser::StructTypeMemberContext::copyFrom(StructTypeMemberContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- StructTypeConstructorContext ------------------------------------------------------------------

MandaParser::ParameterListContext* MandaParser::StructTypeConstructorContext::parameterList() {
  return getRuleContext<MandaParser::ParameterListContext>(0);
}

MandaParser::FunctionBodyContext* MandaParser::StructTypeConstructorContext::functionBody() {
  return getRuleContext<MandaParser::FunctionBodyContext>(0);
}

tree::TerminalNode* MandaParser::StructTypeConstructorContext::Identifier() {
  return getToken(MandaParser::Identifier, 0);
}

MandaParser::StructTypeConstructorContext::StructTypeConstructorContext(StructTypeMemberContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::StructTypeConstructorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitStructTypeConstructor(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StructTypeGetterContext ------------------------------------------------------------------

MandaParser::TypeContext* MandaParser::StructTypeGetterContext::type() {
  return getRuleContext<MandaParser::TypeContext>(0);
}

MandaParser::FunctionBodyContext* MandaParser::StructTypeGetterContext::functionBody() {
  return getRuleContext<MandaParser::FunctionBodyContext>(0);
}

tree::TerminalNode* MandaParser::StructTypeGetterContext::Identifier() {
  return getToken(MandaParser::Identifier, 0);
}

MandaParser::StructTypeGetterContext::StructTypeGetterContext(StructTypeMemberContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::StructTypeGetterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitStructTypeGetter(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StructTypeSetterContext ------------------------------------------------------------------

MandaParser::TypeContext* MandaParser::StructTypeSetterContext::type() {
  return getRuleContext<MandaParser::TypeContext>(0);
}

MandaParser::FunctionBodyContext* MandaParser::StructTypeSetterContext::functionBody() {
  return getRuleContext<MandaParser::FunctionBodyContext>(0);
}

tree::TerminalNode* MandaParser::StructTypeSetterContext::Identifier() {
  return getToken(MandaParser::Identifier, 0);
}

MandaParser::StructTypeSetterContext::StructTypeSetterContext(StructTypeMemberContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::StructTypeSetterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitStructTypeSetter(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StructTypeFieldContext ------------------------------------------------------------------

MandaParser::TypeContext* MandaParser::StructTypeFieldContext::type() {
  return getRuleContext<MandaParser::TypeContext>(0);
}

tree::TerminalNode* MandaParser::StructTypeFieldContext::Identifier() {
  return getToken(MandaParser::Identifier, 0);
}

MandaParser::StructTypeFieldContext::StructTypeFieldContext(StructTypeMemberContext *ctx) { copyFrom(ctx); }
